--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Easy start with Vlava</h1>
+      <h1> Welcme to vlava</h1>
       <h2>We are team of talented designers making websites with Bootstrap</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
